{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 567,
  "lineage": "23c8107f-e5e0-f824-789d-c4341a7ead30",
  "resources": [
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_alb",
      "name": "web_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:loadbalancer/app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34",
            "arn_suffix": "app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34",
            "dns_name": "tf-lb-20200312104746903800000002-173816108.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:476789165241:loadbalancer/app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20200312104746903800000002",
            "security_groups": [
              "sg-0908d0f540541be04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09698af1cbfc321e6"
              },
              {
                "subnet_id": "subnet-0ae65913fc92e64cd"
              }
            ],
            "subnets": [
              "subnet-09698af1cbfc321e6",
              "subnet-0ae65913fc92e64cd"
            ],
            "tags": {
              "Name": "web server lb"
            },
            "vpc_id": "vpc-0020b365c136cf3c8",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.lb_security_group",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_subnet.web_subnet_2",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_http_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:listener/app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34/a745417b03fbf999",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:476789165241:listener/app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34/a745417b03fbf999",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:loadbalancer/app/tf-lb-20200312104746903800000002/eaf8ef8fcb716d34",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.servers.aws_alb.web_alb",
            "module.servers.aws_alb_target_group.web_alb_tg",
            "module.vpc.aws_security_group.lb_security_group",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_subnet.web_subnet_2",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web_alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
            "arn_suffix": "targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20200312104737507800000001",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "web_1_alb_attach",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1-20200313064646386500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
            "target_id": "i-067eab6cab2ed31bf"
          },
          "dependencies": [
            "module.servers.aws_alb_target_group.web_alb_tg",
            "module.servers.aws_instance.web_1_instance"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "web_2_alb_attach",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1-20200313064646399600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:476789165241:targetgroup/tf-20200312104737507800000001/5dddf3b11bd47bb1",
            "target_id": "i-05ce29166a2a7f0aa"
          },
          "dependencies": [
            "module.servers.aws_alb_target_group.web_alb_tg",
            "module.servers.aws_instance.web_2_instance"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0acf9e29098c88351",
            "domain": "vpc",
            "id": "eipalloc-0bc56ab0083c668e4",
            "network_interface": "eni-0a4c4a3bfbf025e15",
            "private_dns": "ip-10-0-1-244.us-east-2.compute.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-3-13-23-234.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.23.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_1_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:476789165241:instance/i-0b74ba4babf682705",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b74ba4babf682705",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pub",
            "monitoring": false,
            "primary_network_interface_id": "eni-071e63b94919ccde7",
            "private_dns": "ip-10-0-3-252.us-east-2.compute.internal",
            "private_ip": "10.0.3.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02cc399c72cb38d5c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02246f6ae136583ca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e9c16caa8df290e",
            "tags": {
              "Name": "app instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02246f6ae136583ca"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.app_security_group",
            "module.vpc.aws_subnet.app_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:476789165241:instance/i-061072af549054c3d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061072af549054c3d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pub",
            "monitoring": false,
            "primary_network_interface_id": "eni-0926b96c1efe81c4f",
            "private_dns": "ip-10-0-4-242.us-east-2.compute.internal",
            "private_ip": "10.0.4.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-096ba6b6aac5a1028",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02246f6ae136583ca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddcf2bd84d852504",
            "tags": {
              "Name": "app instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02246f6ae136583ca"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.app_security_group",
            "module.vpc.aws_subnet.app_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:476789165241:instance/i-067eab6cab2ed31bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067eab6cab2ed31bf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pub",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0fc56d06b5d17f7",
            "private_dns": "ip-10-0-1-21.us-east-2.compute.internal",
            "private_ip": "10.0.1.21",
            "public_ip": "18.216.152.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b2a104712ffb295e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae65913fc92e64cd",
            "tags": {
              "Name": "web instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054d4b32bfdcd2557"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.web_security_group",
            "module.vpc.aws_subnet.web_subnet_1"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:476789165241:instance/i-05ce29166a2a7f0aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ce29166a2a7f0aa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pub",
            "monitoring": false,
            "primary_network_interface_id": "eni-044bd80a986ee85ce",
            "private_dns": "ip-10-0-2-136.us-east-2.compute.internal",
            "private_ip": "10.0.2.136",
            "public_ip": "18.216.120.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b2f34adbc3437b1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09698af1cbfc321e6",
            "tags": {
              "Name": "web instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-054d4b32bfdcd2557"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.web_security_group",
            "module.vpc.aws_subnet.web_subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0eb53d88b35fb070f",
            "owner_id": "476789165241",
            "tags": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc56ab0083c668e4",
            "id": "nat-0c63eb0465a0f84ce",
            "network_interface_id": "eni-0a4c4a3bfbf025e15",
            "private_ip": "10.0.1.244",
            "public_ip": "3.13.23.234",
            "subnet_id": "subnet-0ae65913fc92e64cd",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ip",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0503e4cc4e831157c",
            "owner_id": "476789165241",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c63eb0465a0f84ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app_route_table"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b3838ce1181c9122",
            "owner_id": "476789165241",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb53d88b35fb070f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_rote_table_assoc_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006bda53112119d4e",
            "route_table_id": "rtb-0503e4cc4e831157c",
            "subnet_id": "subnet-06e9c16caa8df290e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.app_route_table",
            "module.vpc.aws_subnet.app_subnet_1",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_rote_table_assoc_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d7892051b3aede4",
            "route_table_id": "rtb-0503e4cc4e831157c",
            "subnet_id": "subnet-0ddcf2bd84d852504"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.app_route_table",
            "module.vpc.aws_subnet.app_subnet_2",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_route_table_assoc_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a41759208b47e9d0",
            "route_table_id": "rtb-0b3838ce1181c9122",
            "subnet_id": "subnet-0ae65913fc92e64cd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.web_route_table",
            "module.vpc.aws_subnet.web_subnet_1",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_route_table_assoc_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e229195fe7d889ef",
            "route_table_id": "rtb-0b3838ce1181c9122",
            "subnet_id": "subnet-09698af1cbfc321e6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.web_route_table",
            "module.vpc.aws_subnet.web_subnet_2",
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:security-group/sg-02246f6ae136583ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02246f6ae136583ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "app security group",
            "name_prefix": null,
            "owner_id": "476789165241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:security-group/sg-0fe1b3a5b6e08b11c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe1b3a5b6e08b11c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db security group",
            "name_prefix": null,
            "owner_id": "476789165241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:security-group/sg-0908d0f540541be04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0908d0f540541be04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb security group",
            "name_prefix": null,
            "owner_id": "476789165241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:security-group/sg-054d4b32bfdcd2557",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054d4b32bfdcd2557",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_security_group",
            "name_prefix": null,
            "owner_id": "476789165241",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-06e9c16caa8df290e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06e9c16caa8df290e",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "app_subnet_1"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-0ddcf2bd84d852504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ddcf2bd84d852504",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "app_subnet_2"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-01d60b7c72e30f9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01d60b7c72e30f9bd",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "db_subnet_1"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-09d29e11879fe8641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-09d29e11879fe8641",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "db_subnet_2"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-0ae65913fc92e64cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ae65913fc92e64cd",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "web-subnet-1"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:subnet/subnet-09698af1cbfc321e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09698af1cbfc321e6",
            "map_public_ip_on_launch": false,
            "owner_id": "476789165241",
            "tags": {
              "Name": "web-subnet-2"
            },
            "vpc_id": "vpc-0020b365c136cf3c8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:476789165241:vpc/vpc-0020b365c136cf3c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03bbdfebbcdeb05ed",
            "default_route_table_id": "rtb-0df7ad03027f80093",
            "default_security_group_id": "sg-06a87a67379aaef15",
            "dhcp_options_id": "dopt-33b06a58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0020b365c136cf3c8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df7ad03027f80093",
            "owner_id": "476789165241",
            "tags": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}